js/js.translator/testData/incremental/invalidationWithPL/removeFunctionFromElvis/lib1/l1a.1.kt
inline fun foo77(): Int? = 77
